--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "build": "node scripts/build.js",
     "test": "node scripts/test.js --env=jsdom",
     "dev": "NODE_ENV='development' webpack-dev-server --env.development --config config/webpack.config.dev.js",
-    "prod": "NODE_ENV='production' webpack --env.production --configuration config/webpack.config.prod.js"
+    "prod": "NODE_ENV='production' webpack --env.production --config config/webpack.config.prod.js"
 
   },
   "devDependencies": {
