--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "autoprefixer": "7.1.6",
+    "axios": "^0.18.0",
     "babel-core": "6.26.0",
     "babel-eslint": "7.2.3",
     "babel-jest": "20.0.3",
@@ -27,15 +28,19 @@
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
+    "jwt-decode": "^2.2.0",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
     "promise": "8.0.1",
     "raf": "3.4.0",
     "react": "^16.4.0",
+    "react-bootstrap": "^0.32.1",
     "react-dev-utils": "^5.0.1",
     "react-dom": "^16.4.0",
+    "react-router-dom": "^4.2.2",
     "resolve": "1.6.0",
+    "s": "^0.1.1",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.6.2",
@@ -50,7 +55,6 @@
     "test": "node scripts/test.js --env=jsdom",
     "dev": "NODE_ENV='development' webpack-dev-server --env.development --config config/webpack.config.dev.js",
     "prod": "NODE_ENV='production' webpack --env.production --config config/webpack.config.prod.js"
-
   },
   "devDependencies": {
     "node-sass": "^4.9.0",
