--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js --env=jsdom",
-    "dev": "NODE_ENV='development' webpack-dev-server --env.development --config config/webpack.config.dev.js",
+    "dev": "NODE_ENV='development' webpack-dev-server --env.development --config config/webpack.config.dev.js --history-api-fallback",
     "prod": "NODE_ENV='production' webpack --env.production --config config/webpack.config.prod.js"
   },
   "devDependencies": {
