--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-dev-utils": "^5.0.1",
     "react-dom": "^16.4.0",
     "react-gmaps": "^1.9.0",
+    "react-google-maps": "^9.4.5",
     "react-router-dom": "^4.2.2",
     "resolve": "1.6.0",
     "s": "^0.1.1",
