--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "google-maps-react": "^2.0.2",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
+    "jsonwebtoken": "^8.2.2",
     "jwt-decode": "^2.2.0",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
