add table to actuaciones

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "raf": "3.4.0",
     "react": "^16.4.0",
     "react-bootstrap": "^0.32.1",
+    "react-bootstrap-table": "^4.3.1",
     "react-dev-utils": "^5.0.1",
     "react-dom": "^16.4.0",
     "react-gmaps": "^1.9.0",
