--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-dom": "^16.4.0",
     "react-gmaps": "^1.9.0",
     "react-google-maps": "^9.4.5",
+    "react-js-pagination": "^3.0.2",
     "react-router-dom": "^4.2.2",
     "resolve": "1.6.0",
     "s": "^0.1.1",
