--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "fs-extra": "3.0.1",
     "glamor": "^2.20.40",
     "google-maps-react": "^2.0.2",
+    "history": "^4.7.2",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
     "jsonwebtoken": "^8.2.2",
